Drop rush in favor of pnpm workspaces

--- a/packages/show/package.json
+++ b/packages/show/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@annibale/show",
 	"version": "0.0.1",
+	"license": "ISC",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
