--- a/packages/show-utils/package.json
+++ b/packages/show-utils/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "@annibale/show-cli",
+  "name": "@annibale/show-utils",
   "version": "0.0.1",
-  "description": "CLI for 'show' slides",
+  "description": "extra utilities for writing presentations",
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "bin": {
-    "show": "./dist/index.js"
-  },
   "scripts": {
     "test": "echo 'To be implemented' && exit 1",
-    "cli": "pnpm build && show",
     "build": "rimraf ./dist/ && tsc"
   },
   "author": "",
@@ -20,11 +15,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@types/inquirer": "^7.3.1",
-    "colors": "~1.4.0",
     "commander": "^7.2.0",
-    "inquirer": "^8.1.0",
-    "outdent": "^0.8.0",
-    "show-utils": "workspace:../show-utils"
+    "outdent": "^0.8.0"
   }
 }
