--- a/packages/show-cli/package.json
+++ b/packages/show-cli/package.json
@@ -23,7 +23,7 @@
     "@types/inquirer": "^7.3.1",
     "colors": "~1.4.0",
     "commander": "^7.2.0",
-    "create-svelte": "^2.0.0-next.73",
+    "create-svelte": ">=2.0.0-next.73",
     "inquirer": "^8.1.0",
     "outdent": "^0.8.0",
     "show-utils": "workspace:../show-utils"
