--- a/packages/show-cli/package.json
+++ b/packages/show-cli/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "show": "./dist/index.js"
+    "show": "./dist/cli.js"
   },
   "scripts": {
     "test": "echo 'To be implemented' && exit 1",
@@ -26,6 +26,6 @@
     "create-svelte": ">=2.0.0-next.73",
     "inquirer": "^8.1.0",
     "outdent": "^0.8.0",
-    "show-utils": "workspace:../show-utils"
+    "@annibale/show-utils": "workspace:*"
   }
 }
