--- a/packages/show-utils/package.json
+++ b/packages/show-utils/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf ./dist/ && tsc"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^15.0.0",
     "rimraf": "^3.0.0",
