--- a/packages/show-cli/package.json
+++ b/packages/show-cli/package.json
@@ -20,12 +20,12 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@annibale/show-utils": "workspace:*",
     "@types/inquirer": "^7.3.1",
     "colors": "~1.4.0",
     "commander": "^7.2.0",
     "create-svelte": ">=2.0.0-next.73",
     "inquirer": "^8.1.0",
-    "outdent": "^0.8.0",
-    "@annibale/show-utils": "workspace:*"
+    "outdent": "^0.8.0"
   }
 }
