--- a/packages/show-cli/package.json
+++ b/packages/show-cli/package.json
@@ -26,6 +26,7 @@
     "commander": "^7.2.0",
     "create-svelte": ">=2.0.0-next.73",
     "inquirer": "^8.1.0",
+    "kleur": "^4.1.4",
     "outdent": "^0.8.0"
   }
 }
