--- a/packages/show/package.json
+++ b/packages/show/package.json
@@ -27,5 +27,8 @@
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"reveal.js": "^4.1.3"
+	}
 }
