--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@annibale/show-cli",
+  "name": "@slideshow/cli",
   "version": "0.0.1",
   "description": "CLI for 'show' slides",
   "main": "./dist/index.js",
@@ -20,7 +20,8 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@annibale/show-utils": "workspace:*",
+    "@slideshow/show": "workspace:*",
+    "@slideshow/utils": "workspace:*",
     "@types/inquirer": "^7.3.1",
     "@types/prompts": "^2.0.13",
     "colors": "~1.4.0",
