--- a/packages/create-show/package.json
+++ b/packages/create-show/package.json
@@ -16,8 +16,9 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@annibale/show-cli": "workspace:*",
+    "@slideshow/cli": "workspace:*",
     "commander": "^7.2.0",
-    "create-svelte": ">=2.0.0-next.73"
+    "create-svelte": "2.0.0-next.126",
+    "kleur": "^4.1.4"
   }
 }
