Add prepublish command

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo 'To be implemented' && exit 1",
     "cli": "pnpm build && show",
-    "build": "rimraf ./dist/ && tsc"
+    "build": "rimraf ./dist/ && tsc",
+    "prepublishOnly": "pnpm build"
   },
   "author": "",
   "license": "ISC",
