--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,31 +1,29 @@
 {
-	"name": "sveltekit-mdsvex-blog",
-	"version": "0.0.1",
-	"author": "Mehdi Vasigh <mehdi.vasigh@gmail.com>",
-	"license": "MIT",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. ."
-	},
-	"devDependencies": {
-		"@slideshow/show": "workspace:*",
-		"@sveltejs/adapter-static": "next",
-		"@sveltejs/kit": "next",
-		"mdsvex": "^0.9.3",
-		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0",
-		"rehype-autolink-headings": "^5.0.1",
-		"rehype-slug": "^4.0.1",
-		"remark-abbr": "^1.4.1",
-		"remark-github": "^10.0.1",
-		"svelte": "^3.38.2",
-		"svelte-preprocess": "^4.7.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"reveal.js": "^4.1.3"
-	}
+  "name": "@slideshow/example",
+  "version": "0.0.1",
+  "author": "Alessandro Candido <candido.ale@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "prepare": "svelte-kit sync"
+  },
+  "devDependencies": {
+    "@slideshow/show": "workspace:*",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
+    "mdsvex": "^0.9.3",
+    "rehype-autolink-headings": "^5.0.1",
+    "rehype-slug": "^4.0.1",
+    "remark-abbr": "^1.4.1",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "svelte": "^3.44.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "reveal.js": "^4.1.3"
+  }
 }
