--- a/packages/show/package.json
+++ b/packages/show/package.json
@@ -32,5 +32,8 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "highlight.js": "^11.5.1"
+  }
 }
