--- a/packages/show/package.json
+++ b/packages/show/package.json
@@ -28,6 +28,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "reveal.js": "^4.1.3",
+    "reveal.js-plugins": "^4.1.5",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
