--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,19 +16,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^15.0.0",
-    "rimraf": "^3.0.0",
+    "@types/node": "^15.14.9",
+    "rimraf": "^3.0.2",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "@slideshow/show": "workspace:*",
     "@slideshow/utils": "workspace:*",
-    "@types/prompts": "^2.0.13",
-    "colors": "~1.4.0",
+    "@types/prompts": "^2.0.14",
     "commander": "^9.2.0",
-    "create-svelte": ">=2.0.0-next.129",
+    "create-svelte": "^2.0.0-next.132",
     "kleur": "^4.1.4",
     "outdent": "^0.8.0",
-    "prompts": "^2.4.1"
+    "prompts": "^2.4.2"
   }
 }
