--- a/packages/show/package.json
+++ b/packages/show/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@slideshow/show",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "main library of show components",
+  "keywords": [
+    "slides",
+    "reveal",
+    "svelte"
+  ],
   "author": "Alessandro Candido <candido.ale@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AleCandido/show.git"
+  },
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
