--- a/packages/show/package.json
+++ b/packages/show/package.json
@@ -27,13 +27,12 @@
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
     "@types/reveal": "^4.2.0",
-    "@types/ungap__structured-clone": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "@ungap/structured-clone": "^0.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "klona": "^2.0.5",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "reveal.js": "^4.1.3",
