--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -11,19 +11,20 @@
     "prepare": "svelte-kit sync"
   },
   "devDependencies": {
-    "@slideshow/show": "workspace:*",
+    "@slideshow/show": "^0.0.6",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
-    "mdsvex": "^0.9.3",
+    "@types/reveal": "^4.2.0",
+    "highlight.js": "^11.5.1",
+    "mdsvex": "^0.10.5",
     "rehype-autolink-headings": "^5.0.1",
     "rehype-slug": "^4.0.1",
     "remark-abbr": "^1.4.1",
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
-    "svelte": "^3.44.0"
+    "reveal.js": "^4.1.3",
+    "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.7.3"
   },
-  "type": "module",
-  "dependencies": {
-    "reveal.js": "^4.1.3"
-  }
+  "type": "module"
 }
